package Bomberman;

message Message {

  enum MessageType {
    OWN_MOVE = 1;
    OWN_BOMB = 2;
    MAP_UPDATE = 3;
    PLAYER_UPDATE = 4;
    INFOS = 5;
    CONSUME_BONUS = 6;
    OWN_PLAYER_INFO = 7;
  }
  required MessageType type = 1;

  message Player {
    optional int32 playerId = 1;
    optional float x = 2;
    optional float y = 3;
    optional int32 dir = 4;
  }
  repeated Player player = 4;

  message Map {
    optional int32 startX = 1;
    optional int32 startY = 2;
    optional bytes data = 3;
  }
  repeated Map map = 5;

  message Info {
    optional int32 mapSize = 1;
    optional int32 playersNb = 2;
    optional float startX = 3;
    optional float startY = 4;
  }
  repeated Info info = 6;

  message OwnPlayerInfo {
    optional int32 life = 1;
    optional int32 range = 2;
    optional int32 stock = 3;
  }
  repeated OwnPlayerInfo ownPlayerInfo = 7;

}
